Updated technical resume

--- a/resume.html
+++ b/resume.html
@@ -102,7 +102,7 @@
 
             <!-- title and download link for technical resume -->
             <h3 class="text-center" style="height: 75px; top: 50%; transform: translateY(25%);">
-                Technical Résumé<br><a href="/assets/resumes/Pete_Smith_Resume_(Technical).pdf">Download</a>
+                Technical Résumé<br><a href="/assets/resumes/Pete_Smith_Resume_(Technical).pdf">PDF Download</a>
             </h3>
 
             <hr style="opacity: 0; margin: 20px 0 20px" />
@@ -136,20 +136,22 @@
             <ul>
                 <li>Languages: Python, Java, C, Rust, Ruby, OCaml, Racket, HTML, CSS, JavaScript, SQL</li>
                 <li>Frameworks: Bootstrap, jQuery, Plotly.js</li>
-                <li>Tools and Environments: UNIX, VS Code, Eclipse IDE</li>
-                <li>Coding Skills: Debugging, good code readability, version control</li>
+                <li>Tools and Environments: Linux, VS Code, Eclipse IDE, version control (Git)</li>
+                <li>Coding Skills: Debugging, good code readability</li>
                 <li>Other Skills: Written and oral communication, teamwork, critical thinking, customer service</li>
             </ul>
 
             <h4>Programming Projects</h4>
             <ul>
-                <li><strong>Comet Statistics (HTML, CSS, JS, Python)<span style="float: right">(Web Dev Intern at UMD,
+                <li><strong>Comet Statistics (HTML, CSS, JS, Python, SQL)<span style="float: right">(Web Dev Intern at
+                            UMD,
                             Jun 2023 - Present)</span></strong></li>
                 <ul>
-                    <li>Designing frontend with HTML, CSS, and JS; and jQuery, Plotly.js, and Bootstrap frameworks</li>
-                    <li>Implementing backend using Python to create an automated script that pulls from multiple
-                        databases using HTTP requests and a PostgreSQL Python library with error checking where
-                        appropriate</li>
+                    <li>Using Plotly.js to render comet discovery, observation, and orbital element data in graph form
+                    </li>
+                    <li>Using Python to create an automated backend script that pulls from a local PostgreSQL database
+                        and multiple external databases; accounts for numerous subtleties in the way comet data is
+                        represented</li>
                     <li>Preparing for presentation at ADASS Conference in Nov 2023; abstract submitted Sep 2023</li>
                     <li><a href="https://sbnmpc.astro.umd.edu/cometInfo/">https://sbnmpc.astro.umd.edu/cometInfo/</a>
                         (note: site still in development)</li>
@@ -159,7 +161,7 @@
                 <ul>
                     <li>Designing a personal website ( <a href="https://psmit.dev/">https://www.psmit.dev/</a> ) with
                         focuses on user experience and mobile readiness</li>
-                    <li>Using JavaScript and GitHub's REST API to implement desired functionalities</li>
+                    <li>Using JavaScript to implement dark mode preferences, nav bar animations, and other features</li>
                 </ul>
                 <li><strong>Bloom Filter (Python)<span style="float: right">(CMSC420 at UMD, May 2023 - May
                             2023)</span></strong></li>
@@ -191,7 +193,7 @@
 
             <!-- title and download link for humanities resume -->
             <h3 class="text-center" style="height: 75px; top: 50%; transform: translateY(25%);">Humanities
-                Résumé<br><a href="/assets/resumes/Pete_Smith_Resume_(Humanities).pdf">Download</a>
+                Résumé<br><a href="/assets/resumes/Pete_Smith_Resume_(Humanities).pdf">PDF Download</a>
             </h3>
 
             <hr style="opacity: 0; margin: 20px 0 20px" />
