Added force-loading for light/dark mode icons.
This should resolve any loading time issues when the button is toggled manually.

--- a/changelog.html
+++ b/changelog.html
@@ -62,6 +62,11 @@
 </head>
 
 <body>
+    <!-- Load icons for light/dark mode toggle button -->
+    <!-- Intended to avoid potential slow icon loading times if the mode is manually switched -->
+    <img src="/assets/images/light-mode.svg" style="display:none;">
+    <img src="/assets/images/dark-mode.svg" style="display:none;">
+
     <!-- dark mode toggle button -->
     <div id="dark-mode-btn">
         <input id="btn-circle" type="button"></input>
