--- a/template.html
+++ b/template.html
@@ -18,7 +18,7 @@
 <!-- i. footer links -->
 
 <head>
-    <title>TITLE | Pete Smith</title>
+    <title>Title | Pete Smith</title>
     <link rel="icon" type="image/x-icon" href="/assets/images/favicon.ico">
     <meta name="description" content="DESCRIPTION">
     <meta name="author" content="Pete Smith">
@@ -59,6 +59,11 @@
 </head>
 
 <body>
+    <!-- Load icons for light/dark mode toggle button -->
+    <!-- Intended to avoid potential slow icon loading times if the mode is manually switched -->
+    <img src="/assets/images/light-mode.svg" style="display:none;">
+    <img src="/assets/images/dark-mode.svg" style="display:none;">
+
     <!-- dark mode toggle button -->
     <div id="dark-mode-btn">
         <input id="btn-circle" type="button"></input>
