--- a/coding.html
+++ b/coding.html
@@ -173,19 +173,22 @@
             <div class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
-                        <h5 class="card-title">Comet Statistics (HTML, CSS, JavaScript, Python)<span
+                        <h5 class="card-title">Comet Statistics (HTML, CSS, JavaScript, Python, SQL)<span
                                 style="float: right;">(Jun
                                 2023 - Present)</span></h5>
                         <p class="card-text">Creating a comet statistic site for the NASA Planetary Data System Small
                             Bodies Node at the University of Maryland.
-                            Frontend is being designed with HTML, CSS, and JavaScript, along with the jQuery, Plotly.js,
-                            and Bootstrap frameworks.
+                            The site's frontend uses Plotly.js to render comet discovery, observation, and orbital
+                            element statistics in graph form in real-time in the user's browser. It also includes an
+                            option for the user to input an
+                            observatory code(s) to see statistics from a specific observatory.
                             <br><br>
-                            Site backend is being implemented with Python. HTTP requests and a PostgreSQL Python library
-                            are used to fetch data from
-                            multiple databases before processing. Error checking is used where appropriate to ensure
-                            graceful exits or, where
-                            possible, continued processing with error logs.
+                            The site's backend uses a Python script to pull data from the local PostgreSQL database and
+                            multiple external databases using a PostgreSQL Python library and HTTP requests,
+                            respectively. The script then processes the data while accounting for numerous
+                            inconsistencies in the way comet data has historicallly been recorded. Error checking is
+                            used where appropriate in order to resolve any issues in the data or, if necessary, to
+                            make a graceful exit.
                             <br><br>
                             Preparing to present the site at the ADASS Conference in November 2023. The abstract was
                             submitted and approved in
