Allowed search indexing of home page.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
     <meta name="description" content="A website for all things Pete Smith">
     <meta name="author" content="Pete Smith">
 
-    <meta name="robots" content="noindex, nofollow">
+    <!-- allow indexing for home page only - all other pages should have noindex, nofollow -->
+    <meta name="robots" content="">
     <link rel="canonical" href="https://www.psmit.dev/">
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
