Updated about me in index.html

--- a/index.html
+++ b/index.html
@@ -125,21 +125,22 @@
                         Some info about me:
 
                     <ul class="quick-facts-custom">
-                        <li>I'm an aspiring software engineer based in the Washington, DC area</li>
-                        <li>I'm a senior at the University of Maryland, College Park</li>
-                        <li>I'm pursuing two degrees!
-                            <ul>
-                                <li>B.S. Computer Science</li>
-                                <li>B.A. American History</li>
-                            </ul>
-                        </li>
-                        <li>I'm minoring in Trumpet Performance!</li>
+                        <li>I'm a student/software developer in the Washington, DC area</li>
+                        <li>I'm a senior at the University of Maryland, College Park and am pursuing two degrees and a
+                            minor:</li>
+                        <ul>
+                            <li>B.S., Computer Science</li>
+                            <li>B.A., History</li>
+                            <li>Minor, Trumpet Performance</li>
+                        </ul>
                         <li>I have a strong interest in backend development</li>
                         <li>My general programming focuses:
                             <ul>
                                 <li>Space- and run-time efficiency</li>
                                 <li>Code maintainability (comments, modularity, etc.)</li>
                             </ul>
+                        </li>
+                        <li>I have tangential interests in topics including compilers and programming language paradigms
                         </li>
                         <li>I am the (self-proclaimed) best ping pong player in the world
                             <ul>
