Added "Fraud Plus" to coding.html

--- a/coding.html
+++ b/coding.html
@@ -120,6 +120,43 @@
             <div class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
+                        <h5 class="card-title">Fraud Plus: Interpreter and Compiler (Racket)<span
+                                style="float: right;">(Oct
+                                2023 - Oct
+                                2023)</span></h5>
+                        <p class="card-text">Fraud Plus is an extension of Fraud, a programming language created by the
+                            CMSC430 course faculty. Fraud was discussed
+                            in lecture, and Fraud Plus is an extension of it; both Fraud and Fraud Plus are subsets of
+                            Racket, which the project was
+                            implemented in.
+                            <br><br>
+                            This project dealt heavily with the notion of compile-time environments and variable
+                            scoping. In order to implement the
+                            differences between Racket's "let" and "let*" expressions, specific attention had to be
+                            given to proper use of the stack
+                            in order to avoid any memory-related issues and to ensure consistency of features with
+                            Racket's implementations. Careful
+                            attention also had to be given to stack discipline regarding other parts of the project; to
+                            avoid being overwritten,
+                            values were often placed in the stack. Additionally, features implemented in "Dupe Plus" (a
+                            previously-completed project
+                            in CMSC430) had to be altered in order to work with these new environments.
+                            <br><br>
+                            This project is associated with <i>CMSC430: Introduction to Compilers</i> at the University
+                            of
+                            Maryland.
+                        </p>
+                        <a href="mailto:psmit703@outlook.com" class="btn btn-primary card-link">Contact for access to
+                            code</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-spacing"></div>
+
+            <div class="card-wrapper d-flex justify-content-center">
+                <div class="card" style="width: 80%;">
+                    <div class="card-body">
                         <h5 class="card-title">Dupe Plus: Parser, Interpreter, and Compiler (Racket)<span
                                 style="float: right;">(Sep 2023 - Oct
                                 2023)</span></h5>
