--- a/coding.html
+++ b/coding.html
@@ -120,6 +120,30 @@
             <div class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
+                        <h5 class="card-title">Cross-Paradigm Programming Language<span style="float: right;">(Nov 2023
+                                - Present)</span></h5>
+                        <p class="card-text">CPPL is my attempt at creating a
+                            language that has the features I want it to have;
+                            I have used a variety of languages across multiple paradigms and, while I have thoroughly
+                            enjoyed some such as Python, I
+                            have not come across any that have all of the features that I like.
+                            <br><br>
+                            As such, my primary goal here is to create a language that combines the imperative and
+                            functional paradigms in a way
+                            that best suits my interests.
+                        </p>
+                        <a href="https://github.com/psmit703/cross-paradigm-prog-lang"
+                            class="btn btn-primary card-link">GitHub
+                            Repo</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-spacing"></div>
+
+            <div class="card-wrapper d-flex justify-content-center">
+                <div class="card" style="width: 80%;">
+                    <div class="card-body">
                         <h5 class="card-title">Fraud Plus: Interpreter and Compiler (Racket)<span
                                 style="float: right;">(Oct
                                 2023 - Nov
