Added rdr2 mod manager to coding.html

--- a/coding.html
+++ b/coding.html
@@ -213,6 +213,25 @@
             <div class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
+                        <h5 class="card-title">Red Dead Redemption 2 Mod Manager<span style="float: right;">(Sep 2023
+                                - Present)</span></h5>
+                        <p class="card-text">A mod manager/loader for Red Dead Redemption 2. Implementing frontend using
+                            Qt (PyQt5) GUI and backend using Python. The
+                            program will keep track of user-specified mods and, when prompted by the user, copy them to
+                            the game directory or remove
+                            them from the game directory.
+                        </p>
+                        <a href="https://github.com/psmit703/rdr2-mod-loader" class="btn btn-primary card-link">GitHub
+                            Repo</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-spacing"></div>
+
+            <div class="card-wrapper d-flex justify-content-center">
+                <div class="card" style="width: 80%;">
+                    <div class="card-body">
                         <h5 class="card-title">Intro to Racket (Racket)<span style="float: right;">(Sep 2023 - Sep
                                 2023)</span></h5>
                         <p class="card-text">This is a collection of short Racket functions intended to familiarize
