Updated technical resume

--- a/resume.html
+++ b/resume.html
@@ -113,7 +113,9 @@
             <hr style="opacity: 0; margin: 20px 0 20px" />
 
             <!-- begin technical resume -->
+            <br>
             <h3 class="text-center">Pete Smith</h3>
+            <br>
             <p class="text-center">(443) 254-2441 | <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a> |
                 Washington, D.C. Area</p>
             <p class="text-center"><a href="https://www.psmit.dev/">https://www.psmit.dev/</a> | <a
@@ -122,25 +124,24 @@
 
             <h4>Education</h4>
             <ul>
-                <li><strong>University of Maryland, College Park<span style="float: right">(Aug 2019 -
-                            Present)</span></strong></li>
+                <li><strong>University of Maryland, College Park<span style="float: right">(Expected Dec
+                            2024)</span></strong></li>
                 <ul>
-                    <li>Bachelor of Science, Computer Science; Bachelor of Arts, History; Minor, Trumpet Performance
-                    </li>
-                    <li>Diploma Expected Dec 2024</li>
+                    <li>Dual Degree: Bachelor of Science, Computer Science; Bachelor of Arts, History</li>
+                    <li>Minor, Trumpet Performance</li>
                     <li>Cumulative GPA: 3.356 (Aug 2023)</li>
-                    <li>Relevant Coursework: CMSC430 - Intro to Compilers; CMSC421 - Intro to AI; CMSC420 - Advanced
+                    <li>Relevant Coursework: Intro to Compilers; Intro to AI; Advanced
                         Data
-                        Structures; CMSC351
-                        - Algorithms</li>
-                    <li>Member: Multi-Agent Reinforcement Learning Reading Group; History Undergraduate Association</li>
+                        Structures; Algorithms</li>
+                    <li>Member: Association for Computing Machinery; Multi-Agent Reinforcement Learning Reading Group;
+                        History Undergraduate Association</li>
                 </ul>
             </ul>
 
             <h4>Skills and Attributes</h4>
             <ul>
                 <li>Languages: Python, Java, C, Rust, Ruby, OCaml, Racket, HTML, CSS, JavaScript, SQL</li>
-                <li>Frameworks: Bootstrap, jQuery, Plotly.js</li>
+                <li>Frameworks: Bootstrap, jQuery, Plotly.js, Qt (PyQt) GUI</li>
                 <li>Tools and Environments: Linux, VS Code, Eclipse IDE, version control (Git)</li>
                 <li>Coding Skills: Debugging, good code readability</li>
                 <li>Other Skills: Written and oral communication, teamwork, critical thinking, customer service</li>
@@ -164,18 +165,24 @@
                 <li><strong>Personal Website (HTML, CSS, JS)<span style="float: right">(Personal Project, Jun 2023 -
                             Present)</span></strong></li>
                 <ul>
-                    <li>Designing a personal website ( <a href="https://psmit.dev/">https://www.psmit.dev/</a> ) with
-                        focuses on user experience and mobile readiness</li>
-                    <li>Using JavaScript to implement dark mode preferences, nav bar animations, and other features</li>
+                    <li>Designing a website ( <a href="https://psmit.dev/">https://www.psmit.dev/</a> ) focusing on user
+                        experience and mobile readiness</li>
+                    <li>Using JavaScript to implement features such as dark mode preference and nav bar animations</li>
+                    <li>Making calls to GitHub's REST API to display the ten most recent site changes</li>
                 </ul>
-                <li><strong>Bloom Filter (Python)<span style="float: right">(CMSC420 at UMD, May 2023 - May
+                <li><strong>Fraud Plus: Interpreter and Compiler (Racket)<span style="float: right">(Intro to Compilers
+                            at UMD, Oct 2023 - Nov
                             2023)</span></strong></li>
                 <ul>
-                    <li>Implemented insert, hash, rebuild, and search functions for a Bloom Filter</li>
-                    <li>Allows for arbitrary bit array length, number of hash functions, and max false-positive
-                        probability</li>
-                    <li>Automatically rebuilds the Bloom Filter when the false-positive probability is greater than the
-                        threshold as determined by a simplified, approximate probability formula</li>
+                    <li>Implemented an interpreter and compiler for a subset of Racket as defined by course faculty</li>
+                    <li>Introduced variable scoping, requiring significant attention to proper use of the runtime stack
+                    </li>
+                    <li>Introduced error detection and a larger set of type definitions to create a more feature-rich
+                        language</li>
+                    <li>Used proper stack discipline with nested expressions, ensuring no conflicts with the environment
+                    </li>
+                    <li>Ported features from a smaller subset, ensuring compatibility with error and scoping
+                        functionalities</li>
                 </ul>
             </ul>
 
@@ -186,7 +193,7 @@
                             Present)</span></strong></li>
                 <ul>
                     <li>Creating a comet statistic site for the NASA Planetary Data System Small Bodies Node at UMD</li>
-                    <li>Creating a tool to automate converting from the "new" IAU comet designation system to the "old"
+                    <li>Creating a tool to automate converting from the "new" comet designation system to the "old"
                         system</li>
                     <li>Gaining a strong understanding of SQL, interacting with web APIs, and general web development
                     </li>
@@ -204,7 +211,9 @@
             <hr style="opacity: 0; margin: 20px 0 20px" />
 
             <!-- begin humanities resume -->
+            <br>
             <h3 class="text-center">Pete Smith</h3>
+            <br>
             <p class="text-center">(443) 254-2441 | <a href="mailto:psmit703@outlook.com">psmit703@outlook.com</a> |
                 Washington, D.C. Area | <a
                     href="https://www.linkedin.com/in/petesmith-umd/">linkedin.com/in/petesmith-umd</a></p>
