Updated humanities resume

--- a/resume.html
+++ b/resume.html
@@ -220,32 +220,45 @@
 
             <h4>Education</h4>
             <ul>
-                <li><strong>University of Maryland, College Park<span style="float: right">(Aug 2019 -
-                            Present)</span></strong></li>
+                <li><strong>University of Maryland, College Park<span style="float: right">(Expected December
+                            2024)</span></strong></li>
                 <ul>
-                    <li>Bachelor of Arts, History; Bachelor of Science, Computer Science; Minor, Trumpet Performance
-                    </li>
-                    <li>Diploma Expected Dec 2024</li>
+                    <li>Dual Degree: BA, History; BS, Computer Science</li>
+                    <li>Minor, Trumpet Performance</li>
                     <li>Cumulative GPA: 3.356 (Aug 2023)</li>
-                    <li>Relevant Coursework: HIST466 - Immigration and Ethnicity in the U.S.; HIST355 - Civil War and
-                        Industrialization (1860-1900); HIST354 -
-                        Antebellum America (1815-1861); HIST429A - Sex and Class in Victorian Britain</li>
-                    <li>Member: History Undergraduate Association; Multi-Agent Reinforcement Learning Reading Group</li>
+                    <li>Relevant Coursework: Immigration and Ethnicity in the U.S.; Civil War and
+                        Industrialization (1860-1900); Antebellum America (1815-1861); Sex and Class in Victorian
+                        Britain</li>
+                    <li>Member: History Undergraduate Association; Association for Computing Machinery; Multi-Agent
+                        Reinforcement Learning Reading Group</li>
                 </ul>
             </ul>
-
-            <h4>Skills and Attributes</h4>
+            <h4>Work Experience</h4>
             <ul>
-                <li>Skills: Written and oral communication, critical thinking, research, teamwork, customer service</li>
-                <li>Attributes: Punctual, efficient, organized</li>
-                <li>Software: Proficient in Microsoft Office and Google Docs Suites</li>
-                <li>Other Skills: Programming languages - Python, Java, C, Rust, HTML, CSS, JavaScript, SQL</li>
+                <li><strong>History Intern (Enslaved.org: Journal of Slavery and Data Preservation)<span
+                            style="float: right">(August
+                            2023 - Present)</span></strong></li>
+                <ul>
+                    <li>Collaborate with a team at Virginia Tech to research runaway enslaved persons and indentured
+                        servants in colonial Virginia and Maryland</li>
+                    <li>Analyze contemporary documents to record biographical information of runaways and to establish
+                        context surrounding their attempts</li>
+                    <li>Create a user guide to introduce students to the project and its dataset</li>
+                </ul>
+                <li><strong>Web Development Intern (University of Maryland)<span style="float: right">(June 2023 -
+                            Present)</span></strong></li>
+                <ul>
+                    <li>Create a comet statistic site for the NASA Planetary Data System Small Bodies Node at UMD</li>
+                    <li>Prepare to present <i>Comet Statistics</i> at ADASS Conference in Nov 2023; abstract submitted
+                        Sep 2023</li>
+                    <li>Develop a tool to automate converting from the "new" to the "old" IAU comet designation system
+                    </li>
+                </ul>
             </ul>
-
             <h4>Selected Papers</h4>
             <ul>
                 <li><strong>"<i>American Notes</i>: Exploring Antebellum Institutionalism"<span
-                            style="float: right">(HIST354 at UMD, Spring 2023)</span></strong></li>
+                            style="float: right">(Antebellum America at UMD, April 2023)</span></strong></li>
                 <ul>
                     <li>In the context of the critiques in Charles Dickens' American Notes, this paper examines a
                         variety of
@@ -258,7 +271,8 @@
                         rapidly increasing societal division seen at the time.
                     </li>
                 </ul>
-                <li><strong>"Masculinity in Victorian Britain"<span style="float: right">(HIST429A at UMD, Fall
+                <li><strong>"Masculinity in Victorian Britain"<span style="float: right">(Sex and Class in Victorian
+                            Britain at UMD, November
                             2022)</span></strong></li>
                 <ul>
                     <li>This paper explores the various elements of what it meant to be masculine in Victorian Britain,
@@ -271,26 +285,12 @@
                     </li>
                 </ul>
             </ul>
-
-            <h4>Work Experience</h4>
+            <h4>Skills and Attributes</h4>
             <ul>
-                <li><strong>History Intern (Enslaved.org: Journal of Slavery and Data Preservation)<span
-                            style="float: right">(Aug 2023 - Present)</span></strong></li>
-                <ul>
-                    <li>Work will involve collaborating with a team at Virginia Tech to research runaway indentured
-                        servants and enslaved people in colonial Virginia and Maryland</li>
-                    <li>Analyzing contemporary documents to document biographical information of enslaved people</li>
-                    <li>Involves visiting historical sites such as the Riversdale House Museum</li>
-                </ul>
-                <li><strong>Web Development Intern (Univ. of Maryland)<span style="float: right">(Jun 2023 -
-                            Present)</span></strong></li>
-                <ul>
-                    <li>Creating a comet statistic site for the NASA Planetary Data System Small Bodies Node at UMD</li>
-                    <li>Preparing to present <i>Comet Statistics</i> at ADASS Conference in Nov 2023; abstract submitted
-                        Sep 2023</li>
-                    <li>Creating a tool to automate converting from the "new" to the "old" IAU comet designation system
-                    </li>
-                </ul>
+                <li>Skills: Written and oral communication, critical thinking, research, teamwork, customer service</li>
+                <li>Attributes: Punctual, efficient, organized</li>
+                <li>Software: Proficient in Microsoft Office and Google Docs Suites</li>
+                <li>Technical Skills: Python, Java, C, Rust, Ruby, OCaml, Racket, HTML, CSS, JavaScript, SQL</li>
             </ul>
             <!-- end humanities resume -->
 
