--- a/resume.html
+++ b/resume.html
@@ -153,12 +153,13 @@
                             UMD,
                             Jun 2023 - Present)</span></strong></li>
                 <ul>
-                    <li>Using Plotly.js to render comet discovery, observation, and orbital element data in graph form
+                    <li>Using Plotly.js to render comet discovery, orbital element, and observation statistics in graph
+                        form
                     </li>
                     <li>Using Python to create an automated backend script that pulls from a local PostgreSQL database
                         and multiple external databases; accounts for numerous subtleties in the way comet data is
                         represented</li>
-                    <li>Preparing for presentation at ADASS Conference in Nov 2023; abstract submitted Sep 2023</li>
+                    <li>Presented the site as a contributed talk at the 33rd annual ADASS conference on Nov 8, 2023</li>
                     <li><a href="https://sbnmpc.astro.umd.edu/cometInfo/">https://sbnmpc.astro.umd.edu/cometInfo/</a>
                         (note: site still in development)</li>
                 </ul>
@@ -188,7 +189,7 @@
 
             <h4>Work Experience</h4>
             <ul>
-                <li><strong>Web Development Intern (Univ. of Maryland)<span style="float: right">(Jun
+                <li><strong>Web Development Intern (University of Maryland)<span style="float: right">(Jun
                             2023 -
                             Present)</span></strong></li>
                 <ul>
@@ -249,8 +250,8 @@
                             Present)</span></strong></li>
                 <ul>
                     <li>Create a comet statistic site for the NASA Planetary Data System Small Bodies Node at UMD</li>
-                    <li>Prepare to present <i>Comet Statistics</i> at ADASS Conference in Nov 2023; abstract submitted
-                        Sep 2023</li>
+                    <li>Presented <i>Comet Statistics</i> as a contributed talk at the 33rd annual ADASS conference in
+                        Nov 2023</li>
                     <li>Develop a tool to automate converting from the "new" to the "old" IAU comet designation system
                     </li>
                 </ul>
