Updated Comet Statistics description in coding.html

--- a/coding.html
+++ b/coding.html
@@ -257,22 +257,27 @@
                                 style="float: right;">(Jun
                                 2023 - Present)</span></h5>
                         <p class="card-text">Creating a comet statistic site for the NASA Planetary Data System Small
-                            Bodies Node at the University of Maryland.
-                            The site's frontend uses Plotly.js to render comet discovery, observation, and orbital
-                            element statistics in graph form in real-time in the user's browser. It also includes an
-                            option for the user to input an
-                            observatory code(s) to see statistics from a specific observatory.
+                            Bodies Node at the University of Maryland. The
+                            site's frontend uses Plotly.js to render comet discovery, orbital element, and unique object
+                            observation statistics in
+                            graph form in real-time in the user's browser. The site also includes an option for the user
+                            to input an observatory
+                            code(s) to see statistics from a specific observatory for unique object observations,
+                            however this is not currently
+                            possible for discovery or orbital element statistics due to discrepancies in the data from
+                            one of our sources.
                             <br><br>
                             The site's backend uses a Python script to pull data from the local PostgreSQL database and
-                            multiple external databases using a PostgreSQL Python library and HTTP requests,
-                            respectively. The script then processes the data while accounting for numerous
-                            inconsistencies in the way comet data has historicallly been recorded. Error checking is
-                            used where appropriate in order to resolve any issues in the data or, if necessary, to
-                            make a graceful exit.
+                            multiple external databases
+                            using a PostgreSQL Python library and HTTP requests, respectively. The script then processes
+                            the data while accounting
+                            for numerous inconsistencies in the way comet data has historically been recorded. Error
+                            checking is used where
+                            appropriate in order to resolve any issues in the data or, if necessary, to make a graceful
+                            exit.
                             <br><br>
-                            Preparing to present the site at the ADASS Conference in November 2023. The abstract was
-                            submitted and approved in
-                            September 2023.
+                            On November 8, 2023, I presented the site as a contributed talk at the 33rd annual ADASS
+                            conference.
                             <br><br>
                             This project is associated with the NASA Planetary Data System Small Bodies Node at the
                             University of Maryland. Please note that it is still under development.
