Added Squid Games to coding.html

--- a/coding.html
+++ b/coding.html
@@ -120,6 +120,30 @@
             <div class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
+                        <h5 class="card-title">Squid Games<span style="float: right;">(Nov
+                                2023 - Nov
+                                2023)</span></h5>
+                        <p class="card-text">This project extends on the knowledge of the previous project, Fraud Plus.
+                            For Squid Games, we had to write a Racket
+                            program that breaks all of the compilers that were submitted for Fraud Plus, while at the
+                            same time working on the
+                            reference machine.
+                            <br><br>
+                            This project is associated with <i>CMSC430: Introduction to Compilers</i> at the University
+                            of
+                            Maryland.
+                        </p>
+                        <a href="mailto:psmit703@outlook.com" class="btn btn-primary card-link">Contact for access to
+                            code</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-spacing"></div>
+
+            <div class="card-wrapper d-flex justify-content-center">
+                <div class="card" style="width: 80%;">
+                    <div class="card-body">
                         <h5 class="card-title">Cross-Paradigm Programming Language<span style="float: right;">(Nov 2023
                                 - Present)</span></h5>
                         <p class="card-text">CPPL is my attempt at creating a
