Adding IDs to project divs in coding.html

--- a/coding.html
+++ b/coding.html
@@ -117,7 +117,7 @@
             <div class="card-spacing"></div>
 
             <!-- begin project descriptions -->
-            <div class="card-wrapper d-flex justify-content-center">
+            <div id="squid-games" class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
                         <h5 class="card-title">Squid Games<span style="float: right;">(Nov
@@ -141,7 +141,7 @@
 
             <div class="card-spacing"></div>
 
-            <div class="card-wrapper d-flex justify-content-center">
+            <div id="cppl" class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
                         <h5 class="card-title">Cross-Paradigm Programming Language<span style="float: right;">(Nov 2023
@@ -165,7 +165,7 @@
 
             <div class="card-spacing"></div>
 
-            <div class="card-wrapper d-flex justify-content-center">
+            <div id="fraud-plus" class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
                         <h5 class="card-title">Fraud Plus: Interpreter and Compiler (Racket)<span
@@ -202,7 +202,7 @@
 
             <div class="card-spacing"></div>
 
-            <div class="card-wrapper d-flex justify-content-center">
+            <div id="dupe-plus" class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
                         <h5 class="card-title">Dupe Plus: Parser, Interpreter, and Compiler (Racket)<span
@@ -234,7 +234,7 @@
 
             <div class="card-spacing"></div>
 
-            <div class="card-wrapper d-flex justify-content-center">
+            <div id="rdr2" class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
                         <h5 class="card-title">Red Dead Redemption 2 Mod Manager<span style="float: right;">(Sep 2023
@@ -253,7 +253,7 @@
 
             <div class="card-spacing"></div>
 
-            <div class="card-wrapper d-flex justify-content-center">
+            <div id="racket-intro" class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
                         <h5 class="card-title">Intro to Racket (Racket)<span style="float: right;">(Sep 2023 - Sep
@@ -274,7 +274,7 @@
 
             <div class="card-spacing"></div>
 
-            <div class="card-wrapper d-flex justify-content-center">
+            <div id="comet-statistics" class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
                         <h5 class="card-title">Comet Statistics (HTML, CSS, JavaScript, Python, SQL)<span
@@ -316,7 +316,7 @@
 
             <div class="card-spacing"></div>
 
-            <div class="card-wrapper d-flex justify-content-center">
+            <div id="personal-website" class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
                         <h5 class="card-title">This website! (HTML, CSS, JavaScript)<span style="float: right;">(Jun
@@ -336,7 +336,7 @@
 
             <div class="card-spacing"></div>
 
-            <div class="card-wrapper d-flex justify-content-center">
+            <div id="bloom-fitler" class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
                         <h5 class="card-title">Bloom Filter (Python)<span style="float: right;">(May 2023 - May
@@ -357,7 +357,7 @@
 
             <div class="card-spacing"></div>
 
-            <div class="card-wrapper d-flex justify-content-center">
+            <div id="ghostbusters-ai" class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
                         <h5 class="card-title">Ghostbusters/Inference (Python)<span style="float: right;">(May
@@ -379,7 +379,7 @@
 
             <div class="card-spacing"></div>
 
-            <div class="card-wrapper d-flex justify-content-center">
+            <div id="reinforcement-learning" class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
                         <h5 class="card-title">Reinforcement Learning (Python)<span style="float: right;">(Mar 2023 -
@@ -405,7 +405,7 @@
 
             <div class="card-spacing"></div>
 
-            <div class="card-wrapper d-flex justify-content-center">
+            <div id="avl-tree" class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
                         <h5 class="card-title">AVL Tree (Python)<span style="float: right;">(Feb 2023 - Mar 2023)</span>
@@ -427,7 +427,7 @@
 
             <div class="card-spacing"></div>
 
-            <div class="card-wrapper d-flex justify-content-center">
+            <div id="multi-agent-search" class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
                         <h5 class="card-title">Multi-Agent Search (Python)<span style="float: right;">(Feb 2023 - Mar
@@ -450,7 +450,7 @@
 
             <div class="card-spacing"></div>
 
-            <div class="card-wrapper d-flex justify-content-center">
+            <div id="dfs-bfs-ucs-a-star" class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
                         <h5 class="card-title">DFS, BFS, UCS, and A* Search (Python)<span style="float: right;">(Feb
@@ -471,7 +471,7 @@
 
             <div class="card-spacing"></div>
 
-            <div class="card-wrapper d-flex justify-content-center">
+            <div id="microcaml" class="card-wrapper d-flex justify-content-center">
                 <div class="card" style="width: 80%;">
                     <div class="card-body">
                         <h5 class="card-title">"MicrOCaml" Lexer, Parser, and Interpreter (OCaml)<span
